--- a/noticeboard-admin/backend/src/main/resources/templates/inventory.html
+++ b/noticeboard-admin/backend/src/main/resources/templates/inventory.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8" />
     <style>
         table {
             width: 100%;
@@ -13,6 +14,10 @@
         }
         th {
             background-color: #f2f2f2;
+        }
+
+        body {
+            font-family: 'MaruBuri', sans-serif;
         }
     </style>
 </head>
